--- a/public/control.html
+++ b/public/control.html
@@ -3,146 +3,99 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laserpointer Control v3.3</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Control v3.2</title>
   <style>
     body {
       margin: 0;
-      background: #111;
+      background: black;
       color: white;
       font-family: sans-serif;
-      overflow: hidden;
+      text-align: center;
     }
-
-    #colorPicker {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      max-width: 80vw;
-    }
-
-    .colorBtn {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
+    .color-button {
+      width: 10%;
+      aspect-ratio: 1;
+      margin: 1%;
       border: none;
+      border-radius: 50%;
     }
-
-    #laserBtn {
-      position: absolute;
-      bottom: 60px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
+    #laser {
+      width: 30vw;
+      height: 30vw;
+      border-radius: 50%;
+      margin-top: 20px;
       background: white;
-      border-radius: 50%;
       border: none;
-      touch-action: none;
     }
-
     .version {
       position: absolute;
       top: 10px;
       right: 20px;
+      color: white;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <div id="colorPicker"></div>
-  <button id="laserBtn"></button>
-  <div class="version">v3.3</div>
+  <div class="version">v3.2</div>
+  <div id="colorButtons"></div>
+  <button id="laser"></button>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    let isPressed = false;
-    let justStarted = false;
-    let color = 'red';
+    let isDrawing = false;
+    let color = "#ffffff";
 
-    // Farben setzen
-    const colors = ['red', 'orange', 'yellow', 'green', 'blue', 'cyan', 'magenta', 'pink', 'white', 'gray'];
-    const colorPicker = document.getElementById("colorPicker");
+    const colors = [
+      "#ff0000", "#00ff00", "#0000ff", "#ffff00", "#ff00ff",
+      "#00ffff", "#ffffff", "#ff8800", "#888888", "#00ff88"
+    ];
 
+    const colorContainer = document.getElementById("colorButtons");
     colors.forEach(c => {
       const btn = document.createElement("button");
-      btn.className = "colorBtn";
+      btn.className = "color-button";
       btn.style.backgroundColor = c;
-      btn.addEventListener("click", () => {
-        color = c;
-      });
-      colorPicker.appendChild(btn);
+      btn.onclick = () => color = c;
+      colorContainer.appendChild(btn);
     });
 
-    const laserBtn = document.getElementById("laserBtn");
+    const laserButton = document.getElementById("laser");
+    laserButton.addEventListener("touchstart", e => {
+      e.preventDefault();
+      isDrawing = true;
+    });
+    laserButton.addEventListener("touchend", e => {
+      e.preventDefault();
+      isDrawing = false;
+    });
 
-    function handleDraw(x, y) {
-      socket.emit("draw", {
-        x,
-        y,
-        color,
-        isStart: justStarted
-      });
-      justStarted = false;
+    function sendOrientation(alpha, beta) {
+      socket.emit("motion", { alpha, beta, color, isDrawing });
     }
 
-    laserBtn.addEventListener("touchstart", e => {
-      e.preventDefault();
-      isPressed = true;
-      justStarted = true;
-    });
-
-    laserBtn.addEventListener("touchend", e => {
-      e.preventDefault();
-      isPressed = false;
-    });
-
-    // Bewegung
-    let zeroAlpha = null;
-    let zeroBeta = null;
-    const maxAngle = 20;
-
-    window.addEventListener("deviceorientation", (event) => {
-      if (!isPressed) return;
-      if (zeroAlpha === null) {
-        zeroAlpha = event.alpha;
-        zeroBeta = event.beta;
-      }
-
-      let relX = event.alpha - zeroAlpha;
-      let relY = event.beta - zeroBeta;
-
-      // Winkel normalisieren
-      if (relX > 180) relX -= 360;
-      if (relX < -180) relX += 360;
-
-      const normX = Math.max(-maxAngle, Math.min(maxAngle, relX));
-      const normY = Math.max(-maxAngle, Math.min(maxAngle, relY));
-
-      // ACHSEN UMGEKEHRT
-      const canvasX = (-normX + maxAngle) / (2 * maxAngle) * 1024;
-      const canvasY = (-normY + maxAngle) / (2 * maxAngle) * 1024;
-
-      handleDraw(canvasX, canvasY);
-    });
-
-    // iOS-Permission
-    window.addEventListener("click", async () => {
-      if (typeof DeviceOrientationEvent !== "undefined" && typeof DeviceOrientationEvent.requestPermission === "function") {
-        try {
-          const response = await DeviceOrientationEvent.requestPermission();
+    async function initMotion() {
+      if (typeof DeviceOrientationEvent.requestPermission === "function") {
+        await DeviceOrientationEvent.requestPermission().then(response => {
           if (response === "granted") {
-            console.log("Gyro freigegeben");
+            window.addEventListener("deviceorientation", handleOrientation);
           }
-        } catch (err) {
-          console.error(err);
-        }
+        }).catch(console.error);
+      } else {
+        window.addEventListener("deviceorientation", handleOrientation);
       }
-    });
+    }
+
+    function handleOrientation(event) {
+      const { alpha, beta } = event;
+      if (alpha != null && beta != null) {
+        sendOrientation(alpha, beta);
+      }
+    }
+
+    initMotion();
   </script>
 </body>
 </html>
