--- a/public/display.html
+++ b/public/display.html
@@ -1,32 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Display v3.2</title>
+  <title>Laser Display v3.3</title>
   <style>
     body {
       margin: 0;
       background: black;
-    }
-    canvas {
-      display: block;
-      margin: auto;
-      background: black;
-    }
-    .version {
-      position: absolute;
-      top: 10px;
-      left: 20px;
       color: white;
       font-family: sans-serif;
       font-size: 14px;
     }
+    #canvas {
+      display: block;
+      margin: auto;
+      background: black;
+    }
+    #version {
+      position: absolute;
+      top: 6px;
+      right: 10px;
+      font-size: 12px;
+      color: white;
+      opacity: 0.5;
+    }
   </style>
 </head>
 <body>
-  <div class="version">v3.2</div>
+  <div id="version">v3.3</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
 
   <script src="/socket.io/socket.io.js"></script>
@@ -34,37 +36,53 @@
     const socket = io();
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
-    const MAX_ANGLE = 20;
 
-    const centerX = canvas.width / 2;
-    const centerY = canvas.height / 2;
-
-    let lastPoint = null;
-    let laserPoint = null;
+    const maxAngle = 20;
+    let points = [];
+    let laserX = 512;
+    let laserY = 512;
+    let lastX = null;
+    let lastY = null;
+    let color = "#ff0000";
+    let isDrawing = false;
+    let isCalibrated = false;
+    let alpha0 = 0;
+    let beta0 = 0;
 
     ctx.lineCap = "round";
     ctx.lineJoin = "round";
 
-    socket.on("motion", ({ alpha, beta, color, isDrawing }) => {
-      const relX = ((alpha % 360 + 360) % 360); // normalize to [0, 360)
-      let x = (relX > 180 ? relX - 360 : relX) / MAX_ANGLE;
-      let y = beta / MAX_ANGLE;
+    socket.on("motion", ({ alpha, beta, color: c, isDrawing: draw }) => {
+      if (typeof alpha !== "number" || typeof beta !== "number") return;
 
-      x = Math.max(-1, Math.min(1, x));
-      y = Math.max(-1, Math.min(1, y));
+      if (c) color = c;
+      if (draw !== undefined) isDrawing = draw;
 
-      const px = centerX + x * centerX;
-      const py = centerY + y * centerY;
+      if (!isCalibrated && isDrawing) {
+        alpha0 = alpha;
+        beta0 = beta;
+        isCalibrated = true;
+      }
 
-      laserPoint = { x: px, y: py, color };
+      const relAlpha = alpha - alpha0;
+      const relBeta = beta - beta0;
+
+      laserX = 512 + (relAlpha / maxAngle) * 512;
+      laserY = 512 + (relBeta / maxAngle) * 512;
+
+      // Begrenzen
+      laserX = Math.max(0, Math.min(1023, laserX));
+      laserY = Math.max(0, Math.min(1023, laserY));
 
       if (isDrawing) {
-        if (lastPoint) {
-          drawLine(lastPoint, laserPoint);
+        if (lastX !== null && lastY !== null) {
+          drawLine(lastX, lastY, laserX, laserY, color);
         }
-        lastPoint = { ...laserPoint };
+        lastX = laserX;
+        lastY = laserY;
       } else {
-        lastPoint = null;
+        lastX = null;
+        lastY = null;
       }
     });
 
@@ -72,35 +90,27 @@
       ctx.clearRect(0, 0, canvas.width, canvas.height);
     });
 
-    function drawLine(p1, p2) {
-      ctx.strokeStyle = p1.color;
+    function drawLine(x1, y1, x2, y2, color) {
+      ctx.strokeStyle = color;
       ctx.lineWidth = 6;
       ctx.beginPath();
-      ctx.moveTo(p1.x, p1.y);
-      ctx.lineTo(p2.x, p2.y);
+      ctx.moveTo(x1, y1);
+      ctx.lineTo(x2, y2);
       ctx.stroke();
     }
 
-    // Pulsierender Punkt
-    let pulse = 0;
-    let growing = true;
-    function drawPulse() {
-      if (laserPoint) {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        if (!lastPoint) {
-          ctx.beginPath();
-          ctx.arc(laserPoint.x, laserPoint.y, 4 + pulse, 0, 2 * Math.PI);
-          ctx.fillStyle = laserPoint.color;
-          ctx.fill();
-        }
+    function drawLaserDot() {
+      if (!isDrawing) {
+        const r = 6 + Math.sin(Date.now() / 150) * 2;
+        ctx.beginPath();
+        ctx.arc(laserX, laserY, r, 0, 2 * Math.PI);
+        ctx.fillStyle = color;
+        ctx.fill();
       }
-      pulse += growing ? 0.3 : -0.3;
-      if (pulse > 2) growing = false;
-      if (pulse < 0) growing = true;
-      requestAnimationFrame(drawPulse);
+      requestAnimationFrame(drawLaserDot);
     }
 
-    drawPulse();
+    drawLaserDot();
   </script>
 </body>
 </html>
